relational_types_procmacro_tests/tests/02-invalid-weight.stderr
error: proc-macro derive panicked
 --> $DIR/02-invalid-weight.rs:7:10
  |
7 | #[derive(GetCorresponding)]
  |          ^^^^^^^^^^^^^^^^
  |
  = help: message: `weight` attribute must be convertible to f64: ParseFloatError { kind: Invalid }
